# advanced_llm_architecture

./: CITATION.cff  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: attention_memory_profile.py  bitlinear_throughput.py
configs/: bitnet_158_base.yaml  mini_llm_capstone.yaml  ttt_linear.yaml
docs/: REPOSITORY_IDENTITY.md
docs/theory/: week1_quantization.md  week2_ttt.md  week3_difflogic.md  week4_attention.md  week5_rope.md  week6_capstone.md
notebooks/: 01_quantization_bitnet.ipynb  02_test_time_training.ipynb  03_differentiable_logic.ipynb  04_flash_attention_tiling.ipynb  05_rope_long_context.ipynb  06_capstone_mini_llm.ipynb  README.md
scripts/: evaluate_perplexity.py  export_quantized.py  train_mini_llm.py
src/: __init__.py
src/attention/: __init__.py  linear_attention.py  naive_attention.py  tiled_attention.py
src/difflogic/: __init__.py  gates.py  layer.py
src/model/: __init__.py  mini_llm.py
src/positional/: __init__.py  rope.py  yarn.py
src/quantization/: __init__.py  absmax.py  bitlinear.py  ste.py
src/ttt/: __init__.py  ttt_linear.py
src/utils/: __init__.py  benchmarks.py  perplexity.py  seeding.py
tests/: test_bitlinear.py  test_difflogic.py  test_mini_llm.py  test_rope.py  test_tiled_attention.py  test_ttt_linear.py
