[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitwise-llm-forge"
version = "0.1.0"
description = "From-scratch, production-grade implementations of modern LLM optimization techniques — course portfolio for 'Advanced LLM Architectures & Optimization'."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Haydar Kılıç" },
]
keywords = [
    "llm", "pytorch", "quantization", "bitnet", "flash-attention",
    "rope", "test-time-training", "from-scratch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# -----------------------------------------------------------------------------
#  Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "PL", "RUF"]
ignore = ["E501", "PLR0913"]  # line length handled by formatter; allow many args

# -----------------------------------------------------------------------------
#  Black
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# -----------------------------------------------------------------------------
#  Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

# -----------------------------------------------------------------------------
#  Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: marks tests that require a CUDA-capable GPU",
]
